--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@
 
 #home::before {
     content: "";
-    background: url('../bg3.jpg') no-repeat center center/cover;
+    background: url('./bg3.jpg') no-repeat center center/cover;
     position: absolute;
     height: 717px;
     width: 100%;
@@ -143,7 +143,7 @@ services section  */
 #client-section::before {
     content: "";
     position: absolute;
-    background: url(../up.jpg);
+    background: url('up.jpg');
     width: 100%;
     height: 322px;
     z-index: -1;
@@ -179,7 +179,7 @@ services section  */
     height: 100%;
     z-index: -1;
     opacity: 0.4;
-    background: url(../f.jpg) no-repeat center center/cover;
+    background: url('f.jpg') no-repeat center center/cover;
 }
 
 #contact-box {
@@ -282,7 +282,7 @@ footer {
 
 
 #preloader {
-    /* background:rgb(255, 255, 255) url(../Hourglass.gif) no-repeat center center;
+    background:rgb(255, 255, 255) url('Hourglass.gif') no-repeat center center;
     height: 100%;
     display: flex;
     justify-content: center;
@@ -290,17 +290,7 @@ footer {
     width: 100%;
     position: fixed;
     z-index: 100;
-    overflow: hidden !important;*/
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: #242f3f;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
+    overflow: hidden;
 }
 
 #invi {
